--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47",
-    "vue-router":"^4.1.6",
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.2"
+    "autoprefixer": "^10.4.14",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "postcss": "^8.4.23",
+    "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.2",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   }
 }
