--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2",
     "vue": "^3.2.47",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue3-carousel": "^0.3.1"
   }
