--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,11 @@
     "gulp-sourcemaps": "^3.0.0",
     "postcss": "^8.4.23",
     "sass": "^1.62.1",
+    "swiper": "^9.3.2",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6",
-    "vue3-carousel": "^0.3.1"
+    "vue-router": "^4.1.6"
   }
 }
